@@ -13,7 +13,11 @@
     * SVNTable.read_from_svn_info refactored to use plain sql instead of sqlalchemy
     * SVNTable.set_base_revision refactored to use plain sql instead of sqlalchemy
     * SVNTable.read_file_sizes refactored to use plain sql instead of sqlalchemy
-    * SVNTable.read_props refactored to use plain sql instead of sqlalchemy
+    * SVNTable.read_props refactored to use plain sqlite instead of sqlalchemy
+    * removed redundant methods InstlClientCopy.get_max_repo_rev_for_source, read_file_sizes_original, set_infomap_file_names
+    * no need to ResolveStrToStr on svnitem.download_path because it's inserted already resolved
+    * SVNTable.get_exec_items renamed get_exec_file_paths and refactored with splain sqlite instead of sqlalchemy
+    * new method SVNItem.select_single_value does common part of calling sqlite for getting a single value
 
 2/10/2017 1.6.2.7
     user visible changes:
